--- a/styles.css
+++ b/styles.css
@@ -1,92 +1,110 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     display:flex;
+    flex-wrap:wrap;
     justify-content: center;
-    align-content: center;
-    min-height: 100vh;
-    background-color: lavender;
     align-items: center;
-    justify-content: center;
-    font-family: "Hanken Grotesk";
-    height:100vh;
+    height: 100vh; 
+    background-color: lavender;
+    font-family: "Hanken Grotesk"; 
 }
+
 
 .flex-container{
-    display:flex;
-    flex-wrap: wrap;
+    display: flex;
+    height: fit-content;
+    width: fit-content;
     background-color: white;
-    border-radius: 20px;
-    justify-content: center;
-    align-items: center;
-
+    border-radius: 20%; 
 }
+
+
 
 .container1{
     
     display:flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     align-items: center;    
     background: linear-gradient(hsl(252, 100%, 67%),hsl(241, 81%, 54%));
     width: 300px;
     height:450px;
     color: white;
     border-radius: 20px;
-    gap:15px;
-    padding:10px;
+    gap:30px;
 }
 
+.header{
+    color: hsla(221, 100%, 96%, 0.8); 
+    margin-bottom: 15px;
+}
 .result-circle{
-    
-
+    display: flex;
+    flex-direction: column;
     background: linear-gradient(hsla(256, 72%, 46%, 1),hsla(241, 72%, 46%, 0));
     border-radius: 100%;
     height:170px;
     width:170px;
-    line-height: 0.1px;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 #personal-result{
-    
-    font-size: 50px;
-    position:relative;
-    left:56px;
-    
+
+    font-size: 70px; 
+   
 }
 
 #max-result{
+    color: hsla(221, 100%, 96%, 0.8);
 
-    position:relative;
-    left:60px;
-    font-weight: lighter;
-      
+
+  
 }
 
 .congratulations{
     text-align: center;
     width:230px;
+    color: hsla(221, 100%, 96%, 0.8);   
+}
+
+#great{
+    color:white;
+    font-size:30px;
 }
 
 .container2{
     display:flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: white;
     width: 300px;
     height:450px;
-    padding: 10px;
     border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;      
+    border-bottom-right-radius: 20px;    
+ 
+  
 }
 
 .summary-header{
     align-self: start;
     margin-left: 20px;
+    margin-bottom: 10px;
 }
 
 .reaction{
     display:flex;
     justify-content: space-between;
+    align-items: center;
     width:250px;
+    height: 50px;
     padding:0px 10px 0px 10px;
     background-color: hsl(0, 77%, 93%);
     border-radius:10px;
@@ -97,10 +115,13 @@ body {
 #reaction-p{
     margin-right: 80px;
     color:hsl(0, 100%, 67%);
+
 }
  .memory{
     display:flex;
     justify-content: space-between;
+    align-items: center;
+    height: 50px;
     width:250px;
     padding:0px 10px 0px 10px;
     background-color: hsl(0, 77%, 93%);
@@ -117,7 +138,9 @@ body {
  .verbal{
     display:flex;
     justify-content: space-between;
+    align-items: center;
     width:250px;
+    height: 50px;
     padding:0px 10px 0px 10px;
     background-color: hsl(0, 77%, 93%);
     border-radius:10px;
@@ -133,7 +156,9 @@ body {
  .visual{
     display:flex;
     justify-content: space-between;
+    align-items: center;
     width:250px;
+    height: 50px;
     padding:0px 10px 0px 10px;
     border-radius:10px;
     margin-bottom: 20px;
@@ -145,14 +170,25 @@ body {
     color: hsl(234, 85%, 45%);
 
 }
+
+#max-score{
+    color:grey;  
+}
+
+#score{
+    font-weight: bold;
+    font-size: 17px;
+}
  .continue{
     display:flex;
     justify-content: center;
     align-items: center;
     background-color: hsl(224, 30%, 27%);
     width:270px;
+    height: 44px;
     border-radius:50px;
     color:white;
+    margin-top:15px;
  }
  .continue:hover{
     background-color: royalblue;
@@ -160,37 +196,75 @@ body {
  }
 
 
-footer{
-  position: absolute;
-  bottom:1px;
-}
 
-@media only screen and (max-width: 450px){
 
-    .flex-container{
-       justify-content: flex-start;
-       width:300px;
-       padding:0;
-       height: 100vh;
-       width:100vh;
+@media only screen and (max-width:450px){
+
+   .flex-container{
+        flex-direction: column;
+        height:100vh;
+        border-radius: 0 0 0 0;
+    
+   }
+    
+    .container1{
+        
+        width: 45vh;
+        height: 250px;
+        justify-content: center;
+        border-radius: 0 0 10% 10%;
+        gap:20px;
+        
+        
+    }
+    .container2{
+        height:420px;
+        justify-content: flex-start;
+        margin-top: 25px;
+        width: 45vh;
+        border-bottom-left-radius: 5%;
+        gap: 0.02%;
     }
 
-   .container1{
-    height:60%;
-    width:100vh;
+    #great{
+        font-size: 20px;
+        
+    }
 
+    .congratulations{
+        height: 80px;
+        width: 230px;
+        font-size: 0.8rem;
+        padding-bottom: 30px;
 
+    }
 
-   }
+    .result-circle{
+       
+        
+        width:100px;
+        height: 100px;
+        font-size: smaller;
+        
+    }
 
-   .container2{
-    width:100vh;
-   }
+    #personal-result{
 
-   footer{
-    position: absolute;
-    bottom: 3px;
-   }
+        font-size: 50px;  
+    }
 
+    .header{
+        position: relative;
+        top:20px;
+       font-size: 0.8rem;  
+    }
 
-
+    .summary-header{
+        
+        font-size: 0.8rem; 
+        margin-left: 40px;
+        
+    }
+    
+    
+}
